src/assets/styles/custom.css
/* ... */
.last_value {
  display: flex;
}

/* LAtest BLock*/

.latestblock {
  width: 460px;
  height: 420px;
  border-radius: 12px;
  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.1);
  border: solid 1px #e3e7eb;
  background-color: #ffffff;
}
@media (max-width: 640px) {
  .latestblock {
    width: 96%;
  }
}
@media (min-width: 641px) and (max-width: 1023px) {
  .latestblock {
    width: 91%;
  }
}
.latest {
  display: flex;
  justify-content: space-between;
  margin: 0 20px;
  margin-top: 20px;
}
@media (max-width: 640px) {
  .latest {
    width: 90%;
    justify-content: space-between;
    margin: 0px;
    margin-top: 15px;
    margin-left: 13px;
  }
}

/* --------------- */
.latest h1 {
  width: 40%;
  font-family: Inter;
  font-size: 15px !important;
  /* font-weight: 600 !important; */
  font-weight: 600;
  letter-spacing: 0.7px;
  color: #2a2a2a;
}
/* @media(max-width:640px){
  .latest h1 {
    font-weight:normal;

  }
} */

.latest2 {
  display: flex;
  justify-content: space-between;
  margin: 0 20px;
  margin-top: 20px;
}
@media (max-width: 640px) {
  .latest2 {
    width: 93%;
    justify-content: space-between;
    margin: 0px;
    margin-top: 15px;
    margin-left: 13px;
  }
}
.latest2 h1 {
  width: 40%;
  font-family: Inter;
  font-size: 15px;
  font-weight: 600;
  letter-spacing: 0.7px;
  color: #2a2a2a;
  margin-left: 2px;
}
@media (max-width: 640px) {
  .latest2 h1 {
    /* font-weight: normal ; */
    width: auto;
    margin-left: 0px;
  }
}

.latest button {
  width: 70px;
  height: 20px;
  background-color: #fff;
  font-family: Inter;
  font-size: 14px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0.54px;
  color: #2149b9 !important;
}

.data {
  width: 100%;
  height: 100%;
  white-space: nowrap;
}

.data_heading {
  width: 96%;
  margin-left: 5px;
  margin-top: 7px;
  display: flex;
  padding: 0 12px;
  letter-spacing: 00.6px;
}
@media (max-width: 640px) {
  .data_heading {
    margin-left: 0px;
    width: 100%;
    margin-top: 15px;
    margin-bottom: 10px;
  }
}
@media (min-width: 641px) and (max-width: 1023px) {
  .data_heading {
    width: 100%;
    margin-left: 15px;
  }
}
.table-grid-block2 {
  padding-top: 0%;
  margin-left: 10px;
  margin-right: 10px;
  width: 80%;
}
.post p {
  font-size: 10px;
}

.data_heading1 {
  margin-top: 7px;
  display: flex;
  padding: 0;
  padding-left: 8px;
  justify-content: space-between;
  width: 100%;
}
@media (max-width: 640px) {
  .data_heading {
    margin-top: 15px;
  }
}
.main_head_last {
  margin-left: 23px;
}

.data_heading1 p {
  font-weight: 600;
  font-size: 13px;
  padding-left: 12px;
}
@media (max-width: 640px) {
  .data_heading1 p {
    /* font-weight:normal; */
    padding-left: 5px;
    font-size: 12px;
  }
}

.data_heading1 p:last-child {
  margin-right: 10px;
}

.data_heading:last-child {
  display: flex;
}

.main_head p {
  font-weight: 600;
  font-size: 13px;
  padding-left: 5px;
}
@media (max-width: 640px) {
  .main_head p {
    /* font-weight: normal; */
    padding-left: 0px;
  }
}

.age p {
  font-weight: 600;
  font-size: 13px;
  padding-left: 63px;
}
@media (max-width: 640px) {
  .age p {
    /* font-weight: normal; */
    padding-left: 25px;
  }
}
/* @media(max-width:1023px){
  .age {

    width: 500px;
   
  }
} */
@media (max-width: 640px) {
  .age {
    width: 20%;
  }
}
@media (min-width: 641px) and(max-width:1023px) {
  .age p {
    padding-left: 85px;
  }
}
.first-block-age {
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0.54px;
  color: #2149b9 !important;
  margin-top: 8px;
  margin-right: 25px;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}
.second-block-age {
  width: 19%;
  height: 100%;
  display: flex;
  align-items: center;
  padding-left: 20px;
  font-size: 11px;
  font-weight: 600;
  animation: fadeInAnimation ease 2s;
  animation-fill-mode: forwards;
}
.third-block-age {
  width: 19%;
  height: 100%;
  display: flex;
  align-items: center;
  padding-left: 20px;
  font-size: 11px;
  padding-left: 0px;
  font-weight: 600;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}
.first-transaction-hash {
  background-color: transparent;
  font-family: Inter;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0.7px;
  color: #2149b9 !important;
  width: 530px;
  margin-left: 7px;
  margin-top: 7px;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}
.second-transaction-amount {
  padding: 0 10px;
  height: 100%;
  display: flex;
  text-align: center;
  align-items: center;
  font-size: 11px;
  font-weight: 600;
  color: #2a2a2a;
  width: 400px;
  padding-left: 0px;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}

.third-transaction-age {
  width: 100%;
  height: 100%;
  display: flex;
  text-align: center;
  align-items: center;
  font-size: 11px;
  font-weight: 600;
  /* padding: 0 10px; */
  /* padding-left: 15px; */
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}
.fourth-transaction-detail {
  background-color: transparent;
  font-family: Inter;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0.54px;
  color: #2149b9 !important;
  width: 190px;
  margin-top: 8px;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: inherit;
  animation-fill-mode: forwards;
}
/* ... */

